Thu Jun 21 17:57:25 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * tests/DCPS/Rejects/publisher.cpp:

          Whitespace changes to fix fuzz warnings.

Thu Jun 21 17:30:26 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/DomainParticipantId:
        * tests/DCPS/RegisterInstance:
        * tests/DCPS/Rejects:
        * tests/DCPS/TopicReuse:

	  Have subversion ignore generated files.

Thu Jun 21 17:23:47 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
        * tests/DCPS/unit/Main.cpp:

          Explicitly include PortableServer.h which was
          being implicitly included from Service_Participant.h
          before include of PortableServer.h was removed
          from it.
Thu Jun 21 15:46:25 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Avoid compiler warnings about ctor initialization order.

Thu Jun 21 15:17:21 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.h:

          Removed unneeded include of PortableServer.h.

Wed Jun 20 18:03:04 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DdsDcps_pch.h:
        * dds/DdsDcps.mpc:

          With the ORB moved from service participant to the
          info repo, removed dependency on TAO_PortableServer
          lib and (implicitly) on TAO_AnyTypeCode lib.

Wed Jun 20 16:47:49 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * NEWS:
        * tests/DCPS/Rejects/DataReaderListener.cpp:
        * tests/DCPS/Rejects/DataReaderListener.h:
        * tests/DCPS/Rejects/publisher.cpp:
        * tests/DCPS/Rejects/run_test.pl:
        * tests/DCPS/Rejects/subscriber.cpp:
        * tests/DCPS/Rejects/Writer.cpp:
        * tests/DCPS/Rejects/Writer.h:
